--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,7 @@ dependencies:
   provider: ^5.0.0
   flutter_typeahead: ^3.2.0
   screenshot: ^1.2.3
-  image_gallery_saver: ^1.6.9
+  # image_gallery_saver: ^1.6.9
   share_plus: ^2.1.4
   path_provider: ^2.0.2
 
